Initial commit: Event Horizon Calendar Widget

--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,9 @@ env/
 *.swo
 
 # Project specific
-token.pickle
+# Google Calendar API credentials
 credentials.json
+token.pickle
 
 # Windows
 Thumbs.db
